@@ -4,6 +4,7 @@ Commons (C) Black Rook Software, All rights reserved.
 Slated for 2.31.2
 =================
 
+- Removed unnecessary overloadings of Common.close(...).
 - Fixed: Made PairGroup.intersection(...) a little more optimized.
 - Deprecated: PairGroup.random(Random, int) in favor of a more descriptive name.
 - Added: PairGroup.randomDensity(Random, float).
